<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/monthlyAdditionsInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="350"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/monthlyAdditionLabel"
        app:layout_constraintTop_toBottomOf="@+id/monthlyAdditionLabel" />

    <EditText
        android:id="@+id/yearlyInterestInput"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="1.2"
        android:inputType="numberDecimal"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/yearlyInterestLabel"
        app:layout_constraintTop_toBottomOf="@+id/yearlyInterestLabel" />

    <TextView
        android:id="@+id/startingAmountLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/starting_amount"
        app:layout_constraintStart_toStartOf="@+id/startingAmountInput"
        app:layout_constraintTop_toTopOf="@+id/yearsLabel" />

    <EditText
        android:id="@+id/startingAmountInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="5200"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startingAmountLabel" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yearsLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/number_of_years"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/yearsInput"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="10"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearsLabel" />

    <TextView
        android:id="@+id/monthlyAdditionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/monthly_addition"
        app:layout_constraintStart_toStartOf="@+id/yearsInput"
        app:layout_constraintTop_toBottomOf="@+id/yearsInput" />

    <TextView
        android:id="@+id/yearlyInterestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearly_interest"
        app:layout_constraintStart_toStartOf="@+id/startingAmountInput"
        app:layout_constraintTop_toTopOf="@+id/monthlyAdditionLabel" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/resultLabel" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="@+id/monthlyAdditionsInput"
        app:layout_constraintTop_toBottomOf="@+id/monthlyAdditionsInput" />

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/result_default"
        app:layout_constraintEnd_toEndOf="@+id/yearlyInterestInput"
        app:layout_constraintTop_toBottomOf="@+id/monthlyAdditionsInput" />

    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/dark_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/monthlyAdditionsInput" />

    <Switch
        android:id="@+id/themeInput"
        android:layout_width="61dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/themeLabel"
        app:layout_constraintEnd_toEndOf="@+id/resultOutput"
        app:layout_constraintTop_toTopOf="@+id/themeLabel"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>